Performance optimizations: remove unnecessary complexity, fix thread pool, remove blocking operations, update airllm limits